be more consistent with input parameters and return types
